<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Регистрация"
        android:background="?attr/colorPrimary"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

        <RadioGroup
            android:id="@+id/role_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/client_radio_button"
                android:layout_width="match_parent"
                android:tag="1"
                android:layout_height="wrap_content"
                android:text="@string/client_role" />

            <RadioButton
                android:id="@+id/driver_radio_button"
                android:layout_width="match_parent"
                android:tag="2"
                android:layout_height="wrap_content"
                android:text="@string/driver_role" />

            <RadioButton
                android:id="@+id/operator_radio_button"
                android:layout_width="match_parent"
                android:tag="3"
                android:layout_height="wrap_content"
                android:text="@string/operator_role" />

        </RadioGroup>

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/username_hint"
            android:inputType="numberSigned"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Введите фамилию и имя"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_text" />

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="0dp"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="70dp"
            android:text="Выберите роль"
            android:textColor="@android:color/darker_gray"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>